tests/spec/fail/interface_call_as_constructor.aja
interface Speaker:
    speak(prefix: str) -> str

s = Speaker()
